# fastapi-mongodb-crud-app

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/db/: database.py
app/models/: summaries.py
app/routers/: ping.py  summaries.py
tests/: conftest.py  test_ping.py  test_summaries.py
