[tool.poetry]
name = "fastapi-mongodb-crud-proto"
version = "0.1.0"
description = ""
authors = ["Bryan Lam <blam@ebsco.com>"]
readme = "README.md"
packages = [{include = "fastapi_mongodb_crud_proto"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.68.0"
uvicorn = "0.12.2"
beanie = "^1.16.8"
pydantic = "^1.10.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
